2003-07-19  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c:
	  Hack up SoundFont scale tuning
	  Fix around single-note tuning change

2003-07-16  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch]: Support for RPN tuning program select

2003-07-14  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* interface/alsaseq_c.c,
	  interface/rtsyn_common.c, interface/rtsyn_winmm.c,
	  timidity/playmidi.[ch], timidity/rcp.c, timidity/readmidi.c:
	  Support for bulk tuning dump

2003-07-10  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c: Fix around single-note tuning change

2003-07-07  Takashi Iwai <tiwai@suse.de>

	* timidity/alsa_a.c:
	  Open a PCM device with non-blocking mode and later set back
	  to the blocking mode (for better usability).

2003-07-06  Saito <timidity@flashmail.com>

	* timidity/reverb.[ch], timidity/readmidi.c:
	  Fix comments.
	* configs/msc-project.zip:
	  Fix twsyng.dsp and interface.h.

2003-07-06  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.[ch], timidity/readmidi.c, timidity/tables.[ch],
	  timidity/timidity.c:
	  Support for single-note tuning change
	  Support for channel mute by user-defined temperament type
	  Fix around temperament type redrawing on ME_RESET
	  Fix around channel mute by temperament type on ME_RESET

2003-07-03  TAMUKI Shoichi <tamuki@linet.gr.jp>

	* timidity/playmidi.c, timidity/tables.[ch], timidity/timidity.c:
	  Support for user-defined temperaments (to be continued)

2003-07-03  Takashi Iwai <tiwai@suse.de>

	* configure.in: Support for tcltk 8.3/8.4
	* timidity/readmidi.c (read_midi_file): Support for RMI
	* timidity/sysdep.h: Fix in C99 bit width warranted integer types

2003-06-30  Eric A. Welsh <ewelsh@ccb.wustl.edu>

	* timidity/mod2midi.c (Voice_SetVolume): converted linear volume
	  events to non-linear events, so that mods will sound correct
	  again

2003-06-30  skeishi <s_keishi@mutt.freemail.ne.jp>
