@@ -1,5 +1,9 @@
 2003-07-19  TAMUKI Shoichi <tamuki@linet.gr.jp>
 
+	* timidity/playmidi.c: Fix around SoundFont scale tuning
+
+2003-07-19  TAMUKI Shoichi <tamuki@linet.gr.jp>
+
 	* timidity/playmidi.[ch], timidity/readmidi.c:
 	  Hack up SoundFont scale tuning
 	  Fix around single-note tuning change
